--- a/website/langs/en.json
+++ b/website/langs/en.json
@@ -275,7 +275,7 @@
     "index-publications-optout-title": "podcast interview",
     "worlds-most-secure-messaging": "World's Most Secure Messaging",
     "index-messaging-p1": "SimpleX messaging has cutting-edge end-to-end encryption.",
-    "index-messaging-p2": "For your security, servers can’t see your messages <span>or who you talk to.</span>",
+    "index-messaging-p2": "For your security and privacy, servers can’t see your messages <span>or who you talk to.</span>",
     "index-messaging-cta": "Learn more about SimpleX messaging",
     "index-nextweb-h2": "You Own<br>The Next Web",
     "index-nextweb-p1": "SimpleX is founded on the belief that <span>you must own your identity, contacts and communities.</span>",
