--- a/website/langs/ro.json
+++ b/website/langs/ro.json
@@ -1,1 +1,56 @@
-{}
+{
+    "home": "Acasă",
+    "developers": "Dezvoltatori",
+    "reference": "Referință",
+    "features": "­Funcționalități",
+    "why-simplex": "De ce SimpleX",
+    "simplex-privacy": "Confidențialitatea SimpleX",
+    "simplex-network": "Rețeaua SimpleX",
+    "simplex-explained": "SimpleX, explicat",
+    "simplex-explained-tab-1-text": "1. Ce experimentează utilizatorii",
+    "simplex-explained-tab-2-text": "2. Cum funcționează",
+    "simplex-explained-tab-3-text": "3. Ce văd serverele",
+    "simplex-explained-tab-1-p-1": "Poți crea contacte și grupuri, și poți avea conversații bidirecționale, ca în oricare altă aplicație de mesagerie.",
+    "simplex-explained-tab-1-p-2": "Cum poate funcționa cu liste de așteptare unidirecționale și fără identificatori de profil ai utilizatorului?",
+    "simplex-explained-tab-2-p-1": "Pentru fiecare conexiune, folosești două cozi de mesaje separate pentru a trimite și a primi mesaje prin servere diferite.",
+    "simplex-explained-tab-2-p-2": "Serverele doar transmit mesaje într-un singur sens, fără a deține imaginea de ansamblu a conversațiilor sau a conexiunilor utilizatorului.",
+    "simplex-explained-tab-3-p-1": "Serverele au credențiale anonime separate pentru fiecare coadă și nu știu cui aparțin acestea.",
+    "simplex-explained-tab-3-p-2": "Utilizatorii pot îmbunătăți și mai mult confidențialitatea metadatelor folosind Tor pentru a accesa serverele, prevenind astfel corelarea prin adresa IP.",
+    "chat-bot-example": "Exemplu de bot de chat",
+    "smp-protocol": "Protocolul SMP",
+    "chat-protocol": "Protocol de chat",
+    "donate": "Donează",
+    "copyright-label": "© 2020-2025 SimpleX | Proiect Open-Source",
+    "simplex-chat-protocol": "Protocolul SimpleX Chat",
+    "terminal-cli": "Terminal CLI",
+    "terms-and-privacy-policy": "Politică de confidențialitate",
+    "hero-header": "Confidențialitate redefinită",
+    "hero-subheader": "Primul serviciu de mesagerie<br>fără identificatori de utilizator",
+    "hero-p-1": "Alte aplicații au identificatori de utilizator: Signal, Matrix, Session, Briar, Jami, Cwtch, etc.<br> SimpleX nu are, <strong>nici măcar numere aleatorii</strong>.<br> Acest lucru îți îmbunătățește radical confidențialitatea.",
+    "hero-overlay-1-textlink": "De ce ID-urile de utilizator compromit confidențialitatea?",
+    "hero-overlay-2-textlink": "Cum funcționează SimpleX?",
+    "hero-overlay-3-textlink": "Evaluări de securitate",
+    "hero-2-header": "Creează o conexiune privată",
+    "hero-2-header-desc": "Videoclipul arată cum te conectezi cu prietenul tău cu ajutorul codului QR de unică folosință al acestuia, fie față în față, fie printr-un link video. De asemenea, te poți conecta prin partajarea unui link de invitație.",
+    "invitation-hero-header": "Ai primit un link de unică folosință pentru a te conecta pe SimpleX Chat",
+    "hero-overlay-1-title": "Cum funcționează SimpleX?",
+    "hero-overlay-2-title": "De ce ID-urile de utilizator compromit confidențialitatea?",
+    "hero-overlay-3-title": "Evaluări de securitate",
+    "feature-1-title": "Mesaje criptate E2E, cu formatare Markdown și editare",
+    "feature-2-title": "Imagini, videoclipuri și fișiere<br>criptate E2E",
+    "feature-3-title": "Grupuri descentralizate criptate E2E &mdash; doar utilizatorii știu că există",
+    "feature-4-title": "Mesaje vocale criptate E2E",
+    "feature-5-title": "Mesaje care dispar",
+    "feature-6-title": "Apeluri audio și video<br>criptate E2E",
+    "feature-7-title": "Stocare portabilă criptată a aplicației &mdash; mută profilul pe alt dispozitiv",
+    "feature-8-title": "Mod incognito &mdash;<br>unic în SimpleX Chat",
+    "simplex-network-overlay-1-title": "Comparație cu protocoalele de mesagerie P2P",
+    "simplex-private-1-title": "2 straturi de<br>criptare end-to-end",
+    "simplex-private-2-title": "Strat adițional de<br>criptare pe server",
+    "simplex-private-3-title": "Transport TLS<br>securizat și autentificat",
+    "simplex-private-4-title": "Acces opțional<br>prin Tor",
+    "simplex-private-5-title": "Straturi multiple de<br>padding al conținutului",
+    "simplex-private-6-title": "Schimb de chei<br>în afara benzii",
+    "simplex-private-7-title": "Verificarea integrității<br>mesajului",
+    "simplex-private-8-title": "Amestecare mesaje<br>pentru a reduce corelația"
+}
