website: change translation string

--- a/website/langs/en.json
+++ b/website/langs/en.json
@@ -281,9 +281,9 @@
     "index-nextweb-p1": "SimpleX is founded on the belief that <span>you must own your identity, contacts and communities.</span>",
     "index-nextweb-p2": "Open and decentralized network lets you connect with people and share ideas: be free and secure.",
     "index-token-h2": "Communities That Last",
-    "index-token-p1": "You will support your favorite groups with future Community vouchers.",
+    "index-token-p1": "You will support your favorite groups with future Community Vouchers.",
     "index-token-p2": "Vouchers will pay for servers, to let your communities stay free and independent.",
-    "index-token-cta": "Learn more about Community Vouchers",
+    "index-token-cta": "Learn more and <strong>get your free NFT</strong><br>for 20% discount on SimpleX Token!",
     "index-roadmap-h2": "SimpleX Roadmap to Free Internet",
     "index-roadmap-2025": "2025",
     "index-roadmap-2025-title": "Scale to Large Communities",
