--- a/website/langs/es.json
+++ b/website/langs/es.json
@@ -257,5 +257,59 @@
     "docs-dropdown-14": "SimpleX para empresas",
     "hero-overlay-card-3-p-3": "Trail of Bits ha revisado el diseño criptográfico de los protocolos de red SimpleX en julio del 2024. <a href=\"/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html\">Saber más</a>.",
     "directory": "Directorio",
-    "about-and-contact-us": "Acerca de & Contacta con nosotros"
+    "about-and-contact-us": "Acerca de & Contacta con nosotros",
+    "index-hero-h1": "Sea Libre",
+    "index-hero-h2": "Libertad y Seguridad<br>en Tus Comunicaciones",
+    "index-hero-p1": "La primera red donde su identidad, contactos y grupos le pertenecen.",
+    "index-hero-download-desktop-btn-title": "Descargar SimpleX Desktop App",
+    "index-google-play-title": "Vista previa pública de iOS en TestFlight",
+    "index-f-droid-title": "Repositorio SimpleX F-Droid",
+    "index-security-assessment-title": "evaluación de seguridad",
+    "index-security-review-2022-title": "Revisión de Seguridad 2022",
+    "index-security-review-2024-title": "Revisión de Seguridad 2024",
+    "index-security-audits-label": "Auditorías de Seguridad",
+    "index-publications-privacy-guides-title": "recomendaciones de mensajería",
+    "index-publications-whonix-title": "recomendación de mensajería de Whonix",
+    "index-publications-heise-title": "publicación",
+    "index-publications-kuketz-title": "revisión",
+    "index-publications-optout-title": "entrevista en podcast",
+    "worlds-most-secure-messaging": "La Mensajería Más Segura del Mundo",
+    "index-messaging-p1": "Le mensajería SimpleX dispone de cifrado de extremo a extremo de vanguardia.",
+    "index-messaging-p2": "Por su seguridad y privacidad los servidores no pueden ver sus mensajes <span>ni con quién habla.</span>",
+    "index-messaging-cta": "Sepa más sobre la mensajería SimpleX",
+    "index-nextweb-h2": "Usted Posee<br>La Web Futura",
+    "index-nextweb-p1": "SimpleX se funda en la creencia de que <span>usted debe ser propietario de su identidad, contactos y comunidades.</span>",
+    "index-nextweb-p2": "Una red abierta y descentralizada que le permite conectarse con personas y compartir ideas: libre y segura.",
+    "index-token-h2": "Comunidades Que Perduran",
+    "index-token-p1": "Usted apoyará a sus grupos favoritos con futuros Vales Comunitarios.",
+    "index-token-p2": "Los vales pagarán los servidores para que sus comunidades sigan siendo libres e independientes.",
+    "index-token-cta": "Conoce más y <strong>obten tu NFT gratuito</strong><br>para un 20% de descuento en SimpleX Token!",
+    "index-roadmap-h2": "Hoja de ruta SimpleX hacia el Internet Libre",
+    "index-roadmap-2025": "2025",
+    "index-roadmap-2025-title": "Escalar a Grandes Comunidades",
+    "index-roadmap-2025-desc": "Huyendo de plataformas centralizadas",
+    "index-roadmap-2026": "2026",
+    "index-roadmap-2026-title": "Comunidades y Servidores Sostenibles",
+    "index-roadmap-2026-desc": "Lanzamiento de los Vales Comunitarios",
+    "index-roadmap-2027": "2027",
+    "index-roadmap-2027-title": "Haga Crecer Sus Comunidades",
+    "index-roadmap-2027-desc": "Herramientas para promocionar sus comunidades",
+    "index-directory-h2": "Únase a las Comunidades SimpleX",
+    "index-directory-p1": "Cientos de miles de personas ya confían en la mensajería SimpleX.",
+    "index-directory-p2": "¡Encuentre sus comunidades en el directorio SimpleX y cree la suya!",
+    "index-directory-cta": "Ver el Directorio SimpleX",
+    "index-directory-users-group-title": "SimpleX users group",
+    "how-secure-comparison-title": "¿Qué nivel de seguridad ofrece el cifrado de extremo a extremo en los distintos servicios de mensajería?",
+    "how-secure-message-padding": "Relleno de mensajes",
+    "how-secure-repudiation-deniability": "Repudio (negabilidad)",
+    "how-secure-forward-secrecy": "Secreto hacia adelante",
+    "how-secure-break-in-recovery": "Seguridad posterior a ser comprometido",
+    "how-secure-two-factor-key-exchange": "Intercambio de claves de dobre factor",
+    "how-secure-post-quantum-hybrid-crypto": "Cifrado híbrido postcuántico",
+    "messengers-comparison-section-list-point-1": "Briar rellena los mensajes hasta el tamaño redondeado a 1024 bytes, Signal a 160 bytes",
+    "messengers-comparison-section-list-point-2": "El repudio no incluye la conexión cliente‑servidor.",
+    "messengers-comparison-section-list-point-3": "Parece que el uso de firmas criptográficas compromete el repudio (negabilidad) pero es necesario aclararlo.",
+    "messengers-comparison-section-list-point-4": "La implementación multi‑dispositivo compromete la seguridad posterior a ser comprometida del Double Ratchet",
+    "messengers-comparison-section-list-point-5": "El intercambio de clave de doble factor es opcional mediante la verificación del código de seguridad.",
+    "messengers-comparison-section-list-point-6": "El acuerdo de claves postcuántico es \"parcial\" &mdash; solo protege determinados pasos del ratchet."
 }
