--- a/website/langs/hu.json
+++ b/website/langs/hu.json
@@ -29,7 +29,7 @@
     "hero-p-1": "Más alkalmazások felhasználói azonosítókkal rendelkeznek: Signal, Matrix, Session, Briar, Jami, Cwtch, stb.<br> A SimpleX azonban nem, <strong>még véletlenszerű számokkal sem</strong>.<br> Ez radikálisan javítja az adatvédelmet.",
     "hero-overlay-1-textlink": "Miért ártanak a felhasználói azonosítók az adatvédelemnek?",
     "hero-overlay-2-textlink": "Hogyan működik a SimpleX?",
-    "hero-overlay-3-textlink": "Biztonsági auditok",
+    "hero-overlay-3-textlink": "Biztonsági felmérések",
     "hero-2-header": "Privát kapcsolat létrehozása",
     "hero-2-header-desc": "A videó bemutatja, hogyan kapcsolódhat a partneréhez egy egyszer használható QR-kód segítségével, személyesen vagy videóhíváson keresztül. Ugyanakkor egy meghívási hivatkozás megosztásával is kapcsolódhat.",
     "hero-overlay-1-title": "Hogyan működik a SimpleX?",
@@ -257,5 +257,59 @@
     "hero-overlay-card-3-p-3": "A Trail of Bits 2024 júliusában ismét auditálta a SimpleX protokollok kriptográfiai és hálózati komponenseit. <a href=\"/blog/20241014-simplex-network-v6-1-security-review-better-calls-user-experience.html\">További információk</a>.",
     "docs-dropdown-14": "SimpleX üzleti célra",
     "directory": "Csoportjegyzék",
-    "about-and-contact-us": "Névjegy és kapcsolat"
+    "about-and-contact-us": "Névjegy és kapcsolat",
+    "index-hero-h1": "Legyen szabad",
+    "index-hero-p1": "Az első olyan hálózat, ahol Ön a tulajdonosa saját identitásának, partnereinek és csoportjainak.",
+    "index-hero-download-desktop-btn-title": "SimpleX számítógépes alkalmazásának letöltése",
+    "index-security-assessment-title": "biztonsági felmérés",
+    "index-security-review-2022-title": "Biztonsági audit 2022",
+    "index-security-review-2024-title": "Biztonsági audit 2024",
+    "index-security-audits-label": "Biztonsági auditok",
+    "index-publications-heise-title": "kiadvány",
+    "index-hero-h2": "Az Ön kommunikációjának<br>szabadsága és biztonsága",
+    "index-google-play-title": "Nyilvános betekintés az iOS alkalmazás fejlesztésébe a TestFlighton",
+    "index-f-droid-title": "SimpleX F-Droid-tároló",
+    "index-publications-privacy-guides-title": "ajánlások",
+    "index-publications-whonix-title": "Whonix ajánlás",
+    "index-publications-kuketz-title": "áttekintés",
+    "index-publications-optout-title": "podcast interjú",
+    "worlds-most-secure-messaging": "A világ legbiztonságosabb üzenetváltó alkalmazása",
+    "index-messaging-p1": "Az üzenetváltás a SimpleXben élvonalbeli végpontok közötti titkosítással rendelkezik.",
+    "index-messaging-p2": "Az Ön biztonsága és magánszférájának védelme érdekében a kiszolgálók nem látják az üzeneteit, <span>sem azt, hogy kivel beszélget.</span>",
+    "index-messaging-cta": "Tudjon meg többet a SimpleX üzenetváltó alkalmazásról",
+    "index-nextweb-h2": "A következő háló<br>Az Öné",
+    "index-nextweb-p1": "A SimpleX arra a meggyőződésre épül, hogy <span>Önnek kell birtokolnia a saját identitását, a kapcsolatait és a közösségeit.</span>",
+    "index-nextweb-p2": "A nyílt és decentralizált hálózat lehetővé teszi, hogy kapcsolatba lépjen másokkal és ötleteket osszon meg: legyen szabad biztonságban.",
+    "index-token-h2": "Időtálló közösségek",
+    "index-token-p1": "A jövőben közösségi utalványokkal támogathatja a kedvenc csoportjait.",
+    "index-token-p2": "Az utalványokkal fizetni tudja a kiszolgálókat, hogy a közösségek szabadok és függetlenek maradhassanak.",
+    "index-token-cta": "Tudjon meg többet, és <strong>szerezzen ingyenes NFT-t</strong><br>20% kedvezménnyel a SimpleX Tokenre!",
+    "index-roadmap-h2": "A SimpleX ütemterve a szabad internethez",
+    "index-roadmap-2025": "2025",
+    "index-roadmap-2025-title": "Skálázódás nagy közösségekre",
+    "index-roadmap-2025-desc": "Központosított platformok elhagyása",
+    "index-roadmap-2026": "2026",
+    "index-roadmap-2026-title": "Fenntartható közösségek és kiszolgálók",
+    "index-roadmap-2026-desc": "Közösségi utalványok elindítása",
+    "index-roadmap-2027": "2027",
+    "index-roadmap-2027-title": "Növelje közösségeit",
+    "index-roadmap-2027-desc": "Eszközök a közösségei népszerűsítéséhez",
+    "index-directory-h2": "Csatlakozzon a SimpleX közösségekhez",
+    "index-directory-p1": "Már emberek százezrei bíznak a SimpleXen való üzenetváltásban.",
+    "index-directory-p2": "Találja meg kedvenc közösségeit a SimpleX csoportjegyzékében, vagy hozza létre a sajátját!",
+    "index-directory-cta": "SimpleX csoportjegyzék megtekintése",
+    "index-directory-users-group-title": "SimpleX felhasználók csoportja",
+    "how-secure-comparison-title": "Mennyire biztonságos a végpontok közötti titkosítás a különböző üzenetváltó alkalmazásokban?",
+    "how-secure-message-padding": "Üzenetkitöltés",
+    "how-secure-repudiation-deniability": "Letagadhatóság",
+    "how-secure-forward-secrecy": "Kompromittálás előtti titkosságvédelem",
+    "how-secure-break-in-recovery": "Kompromittálás utáni biztonság",
+    "how-secure-two-factor-key-exchange": "Kétlépcsős kulcscsere",
+    "how-secure-post-quantum-hybrid-crypto": "Hibrid kriptográfia a kvantum számítógépek megjelenése utánra",
+    "messengers-comparison-section-list-point-1": "A Briar 1024 bájtra, a Signal pedig 160 bájtra kerekítve tölti fel az üzeneteket",
+    "messengers-comparison-section-list-point-2": "A letagadhatóság nem foglalja magába a kliens és a kiszolgáló közötti kapcsolatot.",
+    "messengers-comparison-section-list-point-3": "Úgy tűnik, hogy a kriptográfiai aláírások használata rontja a letagadhatóságot, de ez tisztázásra szorul.",
+    "messengers-comparison-section-list-point-4": "A többeszközös megvalósítás rontja a dupla racsni kompromittálás utáni biztonságát",
+    "messengers-comparison-section-list-point-5": "A kétlépcsős kulcscsere nem követelmény a biztonsági kód ellenőrzéséhez.",
+    "messengers-comparison-section-list-point-6": "A posztkvantum kulcscsere „ritka” &mdash; csak a racsnis lépések egy részét védi."
 }
